<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="about_gobiz">GoBiz has been developed by the International Labour Organization (ILO), with support of the Boston University Spark! programme as well as students from Liger Academy in Cambodia, as an application to help young people access a simple means of learning more about the opportunities for and steps to starting their own business.  While entrepreneurship and self-employment may not be the path chosen by all users, the knowledge presented here should help anyone in their future employment to understand the basics of business.

        \n \nGoBiz leads users through a series of lessons, making up five course areas, framing for them topics they will want to consider to ensure business success.  As each course is completed, users receive an electronic badge, indicating their having committed to completing the lessons covered.  For those completing all five courses, an electronic certificate of course completion will be issued.</string>
    <string name="about_gobiz_header">About GoBiz</string>
    <string name="about_lio">The International Labour Organization (www.ilo.org), celebrating its 100th anniversary in 2019, is the United Nations’ first specialized agency.  The Organization brings together governments, employers and workers of 187 member States  to help create jobs and opportunities for workers of all ages, while setting labour standards, developing policies and devising programmes promoting decent work for all women and men.</string>
    <string name="about_the_ilo_header">About the ILO</string>
    <string name="about_us_header">About Us</string>
    <string name="app_name">goBiz</string>
    <string name="consider_the_following_questions_before_moving_on">Consider the following \nquestions before moving on.</string>
    <string name="slide_to_reveal">Slide to reveal:</string>
    <string name="continued">(continued)</string>
    <string name="course_item_title">Course %1$s: %2$s</string>
    <string name="edit_text_hint">|</string>
    <string name="email_address">E-mail address</string>
    <string name="example_slide_to_reveal_instruction"><![CDATA[Slide to reveal examples of unmet needs & solutions]]></string>
    <string name="facebook_app_id">2038429596241610</string>
    <string name="facebook_login_image_button">Facebook Login - Image Button</string>
    <string name="fb_login_protocol_scheme">fb2038429596241610</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_your_details">Forgot your details?</string>
    <string name="gobiz_logo">Gobiz logo</string>
    <string name="goto_dashboard">Goto Dashboard</string>
    <string name="hint_confirm_pass">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_pass">Password</string>
    <string name="label_about">About</string>
    <string name="label_badges">Badges</string>
    <string name="label_bringing_it_back">Bringing it Back</string>
    <string name="label_conclusion">Conclusion</string>
    <string name="label_continue">Continue</string>
    <string name="label_courses">Courses</string>
    <string name="label_dashboard">Dashboard</string>
    <string name="label_entrepreneurship_success_story">Entrepreneurship Success Story</string>
    <string name="label_exercise">Exercise</string>
    <string name="label_factoids">Factoids</string>
    <string name="label_lesson">Lesson</string>
    <string name="label_lessons">Lessons</string>
    <string name="label_network">Network</string>
    <string name="label_profile">Profile</string>
    <string name="label_quiz">Quiz</string>
    <string name="label_result">Result</string>
    <string name="label_results">Results</string>
    <string name="label_review">Review</string>
    <string name="label_score">Score</string>
    <string name="label_settings">Settings</string>
    <string name="label_story">Story</string>
    <string name="label_success_story">Success Story</string>
    <string name="label_theory_model">Theory/Model</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="lesson_1_bringing_it_back_instructions">Think back to the four points raised earlier - What people need but don\'t have. Resources that you have and could use. Your own strengths and interests. A problem you can solve.</string>
    <string name="lesson_1_bringing_it_back_prompt">Which unmet need / solution do you think fits you and your opportunities best? Type that business idea below, along with the customer needs that it meets. Your answers will be saved.</string>
    <string name="lesson_1_bringing_it_back_question_1">Potential Customers\' Unmet Needs:</string>
    <string name="lesson_1_bringing_it_back_question_2">Business Idea / Solution to Meet this Need:</string>
    <string name="lesson_1_conclusion">Entrepreneurship is not easy, but it can be really rewarding. \n\nThe fact is, most entrepreneurs don’t succeed in their first try at starting a business. We learn from our mistakes. But the best way to avoid mistakes is to be aware of what they potentially can be. Consider the following as you go forward, and perhaps adjust as needed. \n\nThe most common errors made by people starting businesses include:\n
        \n\u2022\t Under-estimating the costs or resources needed.
        \n\u2022\t Not meeting customers’ quality requirements.
        \n\u2022\t Being weak on sales and marketing of your new business
        \n\u2022\t Not managing the finances well – poor accounting.
        \n\u2022\t Not being flexible and adjusting as you start.
        \n\u2022\t Not knowing your competition, and how you can do better than them.
        \n\u2022\t Setting your price too high or too low.
        \n\u2022\t Thinking that success will come easily, quickly or without lots of work.
        \n\nThe following modules will help on much of this – but the best start will be for you to consider these points and keep improving your plan.</string>
    <string name="lesson_1_dialogue_1">\"I think that it will be complicated and expensive to find all the tools and materials to make jewelry. What do you think, Anwar?\"</string>
    <string name="lesson_2_dialogue_1">\"I\'ve been looking at job opportunities, wondering if I should get a job at the same company where my brother works.  He said he could probably get me in.\"</string>
    <string name="lesson_1_dialogue_2">\"I think that people need clothes more than jewelry.\"</string>
    <string name="lesson_2_dialogue_2">\"Me too. My dad wants me to start working at the family shop.  But I don\'t know, I would rather do what I want to do, not just get a job to make money.\"</string>
    <string name="lesson_1_dialogue_3">\"You are right. It is probably better to open a clothing shop.\"</string>
    <string name="lesson_2_dialogue_3">\"Yes, to be honest, I really don\'t like the idea of working in any company.\"</string>
    <string name="lesson_1_dialogue_4">\"I am experienced in baking, but I don\'t feel skilled enough to open a restaurant.\"</string>
    <string name="lesson_2_dialogue_4">\"A friend started a business, it failed, so they started another. They said it is hard work, but they don\'t mind, they are their own boss.\"</string>
    <string name="lesson_1_dialogue_5">\"Everyone needs to buy bread every day. Why not open a bakery?\"</string>
    <string name="lesson_2_dialogue_5">\"And they can do something they love.\"</string>
    <string name="lesson_1_example_solution_1">Italian espresso \nin a/c café</string>
    <string name="lesson_1_example_solution_2">Natural ingredient roadside restaurant/food stand</string>
    <string name="lesson_1_example_solution_3">T-shirts designed by local young artists, silk screened</string>
    <string name="lesson_1_example_solution_4">Online service 24/7</string>
    <string name="lesson_1_example_solution_5">Customized tours involving local community</string>
    <string name="lesson_1_example_solution_6">Baking service delivered by moto</string>
    <string name="lesson_1_example_unmet_need_1">Good quality coffee</string>
    <string name="lesson_1_example_unmet_need_2">Healthy fast food</string>
    <string name="lesson_1_example_unmet_need_3">Low cost stylish clothes</string>
    <string name="lesson_1_example_unmet_need_4">Fast Khmer translation</string>
    <string name="lesson_1_example_unmet_need_5">Tourists want local \'experience\'</string>
    <string name="lesson_1_example_unmet_need_6">Wedding party food</string>
    <string name="lesson_1_examples_caption">Unmet Needs to Solutions</string>
    <string name="lesson_1_exercise_instructions">To find a good business idea, do the following:</string>
    <string name="lesson_2_exercise_instructions">Consider the pros and cons of being an entrepreneur - write them down on a separate paper as in the table below. If you have a friend or family member you can discuss this with, please do so.</string>
    <string name="lesson_2_exercise_followup">Now answer for yourself, if you had to put these onto a scale, to see which would weigh more, which would you say weighs more?\n\nEntrepreneurship is hard work, and can be risky. If you don\'t feel the benefits of being an entrepreneur outweigh those costs, you may want to consider carefully your options. Throughout this programme, consider these pros and cons, and others you see – this programme should help you decide on whether to try to start your own business.</string>
    <string name="lesson_1_exercise_part_1">On one side of a piece of paper write 5 or 10 unmet needs you know about – things you wish you had in your everyday life, or that people you know have mentioned – like good quality coffee (or low priced t-shirts, or designer candles…).</string>
    <string name="lesson_1_exercise_part_2">Then, on the other side of the paper, try coming up with solutions to these unmet needs, innovative things that could be done to address them.</string>
    <string name="lesson_1_factoid_1">An estimated 50% of business failure is the result of incompetence.</string>
    <string name="lesson_1_factoid_2">Of the other half, 30% is due to lack of managerial experience, 10% due to lack of general business experience, and the rest the result of fraud, natural disasters and neglect.</string>
    <string name="lesson_1_factoid_3">With careful planning, much of this can be avoided, increasing your chances of success.</string>
    <string name="lesson_1_intro_title">Creating Business Mission</string>
    <string name="lesson_2_intro_title">Being an \nEntrepreneur</string>
    <string name="lesson_1_quiz_question_1">Which of the following is a first consideration for success in starting a new business?</string>
    <string name="lesson_1_quiz_question_1_answer_1">A customer need that isn\'t being met</string>
    <string name="lesson_1_review_caption">Reviewing Your Business Idea…</string>
    <string name="lesson_1_review_end_note">If you want to change anything, based on these questions, edit your answers above!</string>
    <string name="lesson_1_review_prompt">Think about these needs and solutions - while answering or considering the following questions…</string>
    <string name="lesson_1_story_intro">Zara and Anwar have both been thinking about starting a new business. Zara is considering three different options: opening a tailoring shop, a clothing shop, or a jewelry shop. Anwar has also identified three different ideas: opening a restaurant, a bakery, or a coffee shop. They discuss their ideas together.</string>
    <string name="lesson_2_success_story_source">https://www.inc.com/adam-heitzman/8-wacky-entrepreneur-stories-to-inspire-your-own-business-success.html</string>
    <string name="password">Password</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="txt_sign_up">Enter Your Details</string>
</resources>