<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="78dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="53dp" />

    <EditText
        android:id="@+id/edtEmailSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="125dp" />

    <EditText
        android:id="@+id/edPassSignUp"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edtName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="201dp" />

    <EditText
        android:id="@+id/edtConPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edtName"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="293dp"
        android:ems="10"
        android:hint="@string/hint_confirm_pass"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="201dp" />


    <ImageButton
        android:id="@+id/btnSignUp"
        android:layout_width="57dp"
        android:layout_height="59dp"
        android:layout_alignEnd="@+id/edtName"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/img_go"
        tools:layout_editor_absoluteX="164dp"
        tools:layout_editor_absoluteY="317dp" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="39dp"
        android:hint="@string/txt_sign_up"
        android:text="@string/txt_sign_up"
        android:textSize="24sp" />

    <ProgressBar
        android:id="@+id/progressDialog"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtSignUp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="162dp" />
</RelativeLayout>