<?xml version="1.0" encoding="utf-8"?>




    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".About">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:paddingBottom="@dimen/_30sdp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:srcCompat="@drawable/about"
                    />

                <TextView
                    android:id="@+id/about_us_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us_header"
                    android:textColor="#000"
                    android:textSize="42sp"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_18sdp"/>
            </LinearLayout>




            <TextView
                android:id="@+id/about_gobiz_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/about_gobiz_header"
                android:textColor="#000"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_gobiz-p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/about_gobiz"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/about_ilo_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/about_the_ilo_header"
                android:textColor="#000"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_ilo_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/about_lio"
                android:textColor="#000"
                android:autoLink="all"
                android:textSize="18sp" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dashboard_item_spacing"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>

