<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:weightSum="100"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/lesson_fragment_layout_padding"
        android:layout_marginTop="@dimen/lesson_fragment_layout_padding"
        android:layout_weight="10"
        >

        <include
            layout="@layout/lesson_title_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="0dp"
            android:paddingEnd="@dimen/lesson_fragment_layout_padding"
            android:scaleType="fitEnd"
            android:src="@drawable/notebook_pen"
            />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/lesson_fragment_layout_padding"
        android:layout_marginBottom="@dimen/lesson_fragment_layout_padding"
        android:layout_weight="90"
        android:fillViewport="true"
        android:paddingStart="@dimen/lesson_fragment_layout_padding"
        android:paddingEnd="@dimen/lesson_fragment_layout_padding"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/label_bringing_it_back"
                    android:textColor="#000"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    />


                <TextView
                    android:id="@+id/instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textSize="13sp"
                    android:textStyle="italic"
                    tools:text="@string/lesson_1_bringing_it_back_instructions"/>

                <TextView
                    android:id="@+id/prompt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="#000"
                    android:textSize="14sp"
                    tools:text="@string/lesson_1_bringing_it_back_prompt"/>

                <TextView
                    android:id="@+id/question_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:labelFor="@id/answer_1"
                    android:text="@string/lesson_1_bringing_it_back_question_1"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/answer_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_border"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minHeight="80dp"
                    android:padding="4dp"
                    tools:ignore="Autofill"/>

                <TextView
                    android:id="@+id/question_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:labelFor="@id/answer_2"
                    android:text="@string/lesson_1_bringing_it_back_question_2"
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/answer_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_border"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minHeight="80dp"
                    android:padding="4dp"
                    tools:ignore="Autofill"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/next_button"
        android:layout_width="@dimen/next_button_dimen"
        android:layout_height="@dimen/next_button_dimen"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/lesson_fragment_layout_padding"
        android:layout_marginBottom="@dimen/lesson_fragment_layout_padding"
        android:src="@drawable/next"/>
</LinearLayout>




