<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xlmns="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/lesson_fragment_layout_padding"
        android:paddingTop="@dimen/lesson_fragment_layout_padding"
        android:paddingRight="@dimen/lesson_fragment_layout_padding"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <include
                layout="@layout/lesson_title_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                />

            <ImageView
                android:id="@+id/banner_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:scaleType="centerCrop"
                android:src="@drawable/student"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="22dp"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/label_conclusion"/>

            <TextView
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.1"
                android:textColor="#000"
                android:textSize="16sp"
                tools:text="@string/lesson_1_story_intro"/>

            <TextView
                android:id="@+id/src_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingMultiplier="1.1"
                android:linksClickable="true"
                android:textColor="#000"
                android:textSize="16sp"
                tools:text="@string/lesson_2_success_story_source"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/next_button"
            android:layout_width="@dimen/next_button_dimen"
            android:layout_height="@dimen/next_button_dimen"
            android:layout_gravity="end"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="@dimen/lesson_fragment_layout_padding"
            android:scaleType="fitEnd"
            android:src="@drawable/next"
            tools:ignore="ContentDescription"/>

    </LinearLayout>
</ScrollView>
